--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "next dev -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
@@ -45,12 +45,12 @@
     "firebase": "10.12.2",
     "genkit": "1.20.0",
     "lucide-react": "0.395.0",
-    "next": "14.2.5",
+    "next": "15.0.0-rc.0",
     "next-themes": "0.3.0",
     "patch-package": "8.0.0",
-    "react": "18.3.1",
+    "react": "19.0.0-rc-f994737d14-20240522",
     "react-day-picker": "8.10.1",
-    "react-dom": "18.3.1",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "7.52.0",
     "recharts": "2.12.7",
     "tailwind-merge": "2.3.0",
