--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "1.20.0",
-    "@genkit-ai/next": "1.20.0",
+    "@genkit-ai/google-genai": "^0.1.4",
+    "@genkit-ai/next": "^0.1.4",
     "@hookform/resolvers": "3.9.0",
     "@radix-ui/react-accordion": "1.1.2",
     "@radix-ui/react-alert-dialog": "1.0.5",
@@ -43,14 +43,14 @@
     "dotenv": "16.4.5",
     "embla-carousel-react": "8.1.5",
     "firebase": "10.12.2",
-    "genkit": "1.20.0",
+    "genkit": "^0.1.4",
     "lucide-react": "0.395.0",
-    "next": "15.0.0-rc.0",
+    "next": "14.2.4",
     "next-themes": "0.3.0",
     "patch-package": "8.0.0",
-    "react": "19.0.0-rc-f994737d14-20240522",
+    "react": "18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "18.3.1",
     "react-hook-form": "7.52.0",
     "recharts": "2.12.7",
     "tailwind-merge": "2.3.0",
@@ -61,7 +61,7 @@
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "genkit-cli": "1.20.0",
+    "genkit-cli": "^0.1.4",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2"
